Remove fixed header, change spacing across the entire website

--- a/app/assets/stylesheets/elements/_item-columns.scss
+++ b/app/assets/stylesheets/elements/_item-columns.scss
@@ -161,7 +161,7 @@
   padding: ($margin / 8) 0;
   text-decoration: none;
   transition-property: font-size, padding;
-  transition-duration: 100ms;
+  transition-duration: 50ms;
   will-change: padding, font-size;
 
   &:hover,
